--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     Hello World!
+    <!-- Frank Chimero's "Everything easy is hard again"
+    - https://frankchimero.com/writing/everything-easy-is-hard-again/ -
+    is to blame.-->
   </body>
 </html>
