Added topics list and link from home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <title>Rob Heggen</title>
   </head>
   <body>
-    Hello World!
+    <p>
+      Hello World!
+    </p>
+    <p>
+      <a href="/topics.html">Topic list</a>
+    </p>
+
+
     <!-- Frank Chimero's "Everything easy is hard again"
     - https://frankchimero.com/writing/everything-easy-is-hard-again/ -
     is to blame.-->
