Updates to topic list and home page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   </head>
   <body>
     <p>
-      Hello World!
+      Hi Planet!
+    </p>
+    <h2>Quick Bio</h2>
+    <p>
+      My name is Rob. I help lead a <a href="https://websterdesign.com">branding and design firm</a> in Omaha, NE. I like to read the internet. I hope the internet will like to read me. I'm interested in writing about sucking at a lot of things but trying to get better at those things.
     </p>
     <p>
-      <a href="/topics.html">Topic list</a>
+      <a href="/topics.html">Potential Topic list</a>
     </p>
-
-
     <!-- Frank Chimero's "Everything easy is hard again"
     - https://frankchimero.com/writing/everything-easy-is-hard-again/ -
     is to blame.-->
