--- a/topics.html
+++ b/topics.html
@@ -10,7 +10,7 @@
         Buying a 35 year old business
       </li>
       <li>
-        Sales to creative to sales
+        Sales to developer to owner
       </li>
       <li>
         Personal MBA
@@ -70,6 +70,9 @@
       </li>
       <li>
         Baseball
+      </li>
+      <li>
+        Focus is really hard when you're a generalist
       </li>
     </ul>
   </body>
