--- a/topics.html
+++ b/topics.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rob Heggen - Potential writing topics</title>
+    <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
     <ul>
