added link back to home

--- a/topics.html
+++ b/topics.html
@@ -76,5 +76,6 @@
         Focus is really hard when you're a generalist
       </li>
     </ul>
+    <a href="/"><< back to home</a>
   </body>
 </html>
