removal of some irrelevant items

--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
     <p>
       Hi Planet!
     </p>
-    <h3>Quick Bio</h3>
     <p>
-      My name is Rob. I help lead a <a href="https://websterdesign.com">branding and design firm</a> in Omaha, NE. I like to read the internet. I hope the internet will like to read me. I'm interested in writing about sucking at a lot of things but trying to get better at those things.
+      My name is Rob. I help lead a <a href="https://daake.com">branding and design firm</a> in Omaha, NE. I like to read the internet.
     </p>
-    <p>
-      <a href="/topics.html">Potential Topic list</a>
-    </p>
-    <!-- Frank Chimero's "Everything easy is hard again"
-    - https://frankchimero.com/writing/everything-easy-is-hard-again/ -
-    is to blame.-->
   </body>
 </html>
