added link to specificity project

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
-    <p>
+    <h2>
       Hi Planet!
-    </p>
+    </h2>
     <p>
       My name is Rob. I help lead a <a href="https://daake.com">branding and design firm</a> in Omaha, NE. I like to read the internet.
     </p>
+    <h2>Projects</h2>
+    <ul>
+      <li><a href="/death-to-specificity">Death to Specificity</a></li>
+    </ul>
   </body>
 </html>
